src/frontend/snapshots/Shlang__frontend__parser_test__parse_paren.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"(1+2+b);\")"
---
Ok(
    Spanned {
        item: BinaryNode(
            BinaryNode {
                kind: ADD,
                left: Spanned {
                    item: Value(
                        Num(
                            1.0,
                        ),
                    ),
                    span: Span(
                        1,
                        2,
                    ),
                },
                right: Spanned {
                    item: BinaryNode(
                        BinaryNode {
                            kind: ADD,
                            left: Spanned {
                                item: Value(
                                    Num(
                                        2.0,
                                    ),
                                ),
                                span: Span(
                                    3,
                                    4,
                                ),
                            },
                            right: Spanned {
                                item: Variable(
                                    "b",
                                ),
                                span: Span(
                                    5,
                                    6,
                                ),
                            },
                        },
                    ),
                    span: Span(
                        4,
                        5,
                    ),
                },
            },
        ),
        span: Span(
            2,
            3,
        ),
    },
)
