src/frontend/snapshots/Shlang__frontend__parser_test__single_var_expr_decl.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"var a;\")"
---
Ok(
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: Value(
                        Null,
                    ),
                    span: (
                        4,
                        5,
                    ),
                },
            },
        ),
        span: (
            4,
            6,
        ),
    },
)
