src/frontend/snapshots/Shlang__frontend__parser_test__struct_access_call.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"a.b().c\")"
---
Ok(
    Spanned {
        item: FieldAccess(
            FieldAccess {
                target: Spanned {
                    item: FieldAccess(
                        FieldAccess {
                            target: Spanned {
                                item: Variable(
                                    "a",
                                ),
                                span: Span(
                                    0,
                                    1,
                                ),
                            },
                            requested: Spanned {
                                item: Method {
                                    name: "b",
                                    args: [],
                                },
                                span: Span(
                                    1,
                                    2,
                                ),
                            },
                        },
                    ),
                    span: Span(
                        1,
                        2,
                    ),
                },
                requested: Spanned {
                    item: Property(
                        "c",
                    ),
                    span: Span(
                        5,
                        6,
                    ),
                },
            },
        ),
        span: Span(
            5,
            6,
        ),
    },
)
