src/frontend/snapshots/Shlang__frontend__parser_test__unary_operator.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"!true;\")"
---
Ok(
    UnaryNode {
        kind: NOT,
        object: true[1,5],
    }[1,5],
)
