src/frontend/snapshots/Shlang__frontend__parser_test__unary_operator_paren.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"!(0);\")"
---
Ok(
    Spanned {
        unspanned: UnaryNode(
            UnaryNode {
                kind: NOT,
                object: Spanned {
                    unspanned: Value(
                        Num(
                            0.0,
                        ),
                    ),
                    span: (
                        2,
                        3,
                    ),
                },
            },
        ),
        span: (
            1,
            2,
        ),
    },
)
