src/frontend/snapshots/Shlang__frontend__parser_test__unary_operators.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"!0+(-0);\")"
---
Ok(
    Spanned {
        unspanned: BinaryNode(
            BinaryNode {
                kind: ADD,
                left: Spanned {
                    unspanned: UnaryNode(
                        UnaryNode {
                            kind: NOT,
                            object: Spanned {
                                unspanned: Value(
                                    Num(
                                        0.0,
                                    ),
                                ),
                                span: (
                                    1,
                                    2,
                                ),
                            },
                        },
                    ),
                    span: (
                        1,
                        2,
                    ),
                },
                right: Spanned {
                    unspanned: UnaryNode(
                        UnaryNode {
                            kind: NEGATIVE,
                            object: Spanned {
                                unspanned: Value(
                                    Num(
                                        0.0,
                                    ),
                                ),
                                span: (
                                    5,
                                    6,
                                ),
                            },
                        },
                    ),
                    span: (
                        5,
                        6,
                    ),
                },
            },
        ),
        span: (
            2,
            3,
        ),
    },
)
