src/frontend/snapshots/Shlang__frontend__parser_test__var_assign_do.snap
---
source: src/frontend/parser_test.rs
expression: "parse_full(\"var a = do{1+1}\")"
---
[
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: DoBlock(
                        [
                            Spanned {
                                unspanned: ResultNode(
                                    Spanned {
                                        unspanned: BinaryNode(
                                            BinaryNode {
                                                kind: ADD,
                                                left: Spanned {
                                                    unspanned: Value(
                                                        Num(
                                                            1.0,
                                                        ),
                                                    ),
                                                    span: (
                                                        11,
                                                        12,
                                                    ),
                                                },
                                                right: Spanned {
                                                    unspanned: Value(
                                                        Num(
                                                            1.0,
                                                        ),
                                                    ),
                                                    span: (
                                                        13,
                                                        14,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: (
                                            12,
                                            13,
                                        ),
                                    },
                                ),
                                span: (
                                    12,
                                    13,
                                ),
                            },
                        ],
                    ),
                    span: (
                        10,
                        15,
                    ),
                },
            },
        ),
        span: (
            4,
            7,
        ),
    },
]
