src/frontend/snapshots/Shlang__frontend__parser_test__var_expr_decl_with_expr_.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"var a = 1+2+b;\")"
---
Ok(
    Declare(a) as BinaryNode {
        kind: Add,
        left: BinaryNode {
            kind: Add,
            left: Number(1)[8,9],
            right: Number(2)[10,11],
        }[8,11],
        right: Var(b)[12,13],
    }[8,13][0,13],
)
